--- a/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
+++ b/2_SISTEMAS_LINEARES/2.5_metodos_iterativos.ipynb
@@ -142,7 +142,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -188,6 +189,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Um outro programa, agora usando operações vetoriais com o Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.  -0.2 -0.1]\n",
+      " [-0.2  0.  -0.2]\n",
+      " [-0.2 -0.3  0. ]]\n",
+      "Norma inf. de H= 0.5\n",
+      "[  9.99480160e-01   1.99932320e+00  -7.53200000e-04]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from numpy import linalg as LA\n",
+    "\n",
+    "A = np.array([[10.0, 2.0, 1.0],\n",
+    "              [ 1.0, 5.0, 1.0],\n",
+    "              [ 2.0, 3.0, 10.0]])\n",
+    "b = np.array([14., 11., 8.])\n",
+    "\n",
+    "x = np.array([0,0,0])\n",
+    "x_ant = x.copy()\n",
+    "\n",
+    "n = len(A)\n",
+    "H = A.copy()\n",
+    "g = b.copy()\n",
+    "err = 10.0\n",
+    "\n",
+    "\n",
+    "for i in range(n):\n",
+    "    H[i] = -A[i]/A[i][i]\n",
+    "    g[i] = b[i]/A[i,i]\n",
+    "    \n",
+    "H = H + np.identity(3) #zerando os elementos da diagonal\n",
+    "print (H)\n",
+    "print (\"Norma inf. de H=\", LA.norm(H, np.inf))\n",
+    "\n",
+    "while err>0.001:\n",
+    "    x = np.dot(H,x)+g\n",
+    "    err = abs(max(x-x_ant)/max(x))\n",
+    "    x_ant = x\n",
+    "print(x)\n",
+    "\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Método iterativo de Gaus-Seidel\n",
     "\n",
     "Considere um sistema  de equações lineares $Ax = b$ em que $det(A) \\neq 0$, com a diagonal principal $a_{ii} \\neq 0$, $i=1,...,n$ como segue\n",
@@ -215,57 +277,14 @@
     "\t         x_2^{(k+1)} = \\frac{b_2}{a_{22}}  - \\frac{a_{21}}{a_{22}}x_1^{(k+1)} - \\frac{a_{23}}{a_{22}}x_3^{(k)} - \\cdots - \\frac{a_{1n}}{a_{11}}x_n^{(k)} \\\\ \n",
     "\t         \\vdots   \\\\\n",
     "\t         x_n^{(k+1)} = \\frac{b_n}{a_{nn}}  - \\frac{a_{n1}}{a_{nn}}x_1^{(k+1)} - \\frac{a_{n2}}{a_{nn}}x_3^{(k+1)} - \\cdots - \\frac{a_{n \\, n-1}}{a_{nn}}x_{n-1}^{(k+1)} \\\\\n",
-    "\\end{cases} $$\n",
-    "\n",
-    "\n",
-    "Que, na forma matricial pode ser escrito como\n",
-    "\n",
-    "$$\\left[\n",
-    "    \\begin{array}{c} \n",
-    "\t         x_1^{(k+1)} \\\\ \n",
-    "\t         x_2^{(k+1)} \\\\\n",
-    "             \\vdots\\\\\n",
-    "\t         x_n^{(k+1)} \\\\\n",
-    "\t\\end{array} \n",
-    "\\right]\n",
-    "=\n",
-    "\\left[\\begin{array}{ccccc} \n",
-    "\t         0                     & 0 & 0 & \\cdots & 0 \\\\ \n",
-    "\t         -\\frac{a_{21}}{a_{22}} & 0 & 0 & \\cdots & 0 \\\\\n",
-    "\t         \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
-    "\t         -\\frac{a_{n1}}{a_{nn}} & -\\frac{a_{n2}}{a_{nn}} & \\cdots & -\\frac{a_{n \\,n-1}}{a_{nn}} & 0\\\\\n",
-    "\t         \\end{array} \\right]\n",
-    "             \\left[\n",
-    "    \\begin{array}{c} \n",
-    "\t         x_1^{(k+1)} \\\\ \n",
-    "\t         x_2^{(k+1)} \\\\\n",
-    "             \\vdots\\\\\n",
-    "\t         x_n^{(k+1)} \\\\\n",
-    "\t\\end{array} \n",
-    "\\right]\n",
-    "+\n",
-    "\\left[\\begin{array}{ccccc} \n",
-    "\t         0&  -\\frac{a_{12}}{a_{11}}& -\\frac{a_{13}}{a_{11}}& \\cdots &-\\frac{a_{1n}}{a_{11}} \\\\ \n",
-    "\t         0& 0& -\\frac{a_{23}}{a_{22}} & \\cdots & -\\frac{a_{2n}}{a_{22}} \\\\\n",
-    "\t         \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
-    "\t         0& 0& 0& \\cdots& 0\\\\\n",
-    "\t         \\end{array} \\right]\n",
-    "\\left[\\begin{array}{c} \n",
-    "\t         x_1^{(k)} \\\\ \n",
-    "\t         x_2^{(k)} \\\\\n",
-    "             \\vdots\\\\\n",
-    "\t         x_n^{(k)} \\\\\n",
-    "\t\\end{array} \\right]\n",
-    "+\n",
-    "\\left[ \\begin{array}{c} \n",
-    "\t         \\frac{b1}{a_{11}} \\\\ \n",
-    "\t         \\frac{b2}{a_{22}} \\\\\n",
-    "             \\vdots\\\\\n",
-    "\t         \\frac{bn}{a_{nn}} \\\\\n",
-    "\t\\end{array} \\right]$$\n",
-    "\n",
-    "\n",
-    "\n"
+    "\\end{cases} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exemplos"
    ]
   },
   {
@@ -410,6 +429,185 @@
     "    err = np.amax(np.absolute(x-x_ant))/np.amax(np.absolute(x))   \n",
     "    print (\"(%.4f,\"%x[0],\"%.4f,\"%x[1],\"%.4f,\"%x[2],\"%.4f,\"%x[3],\"%.4f,)\"%x[4], \"err=\",err)\n",
     "    x_ant = np.copy(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Na forma matricial, o método de Gauss-Seidel  pode ser escrito como\n",
+    "\n",
+    "$$\\left[\n",
+    "    \\begin{array}{c} \n",
+    "\t         x_1^{(k+1)} \\\\ \n",
+    "\t         x_2^{(k+1)} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         x_n^{(k+1)} \\\\\n",
+    "\t\\end{array} \n",
+    "\\right]\n",
+    "=\n",
+    "\\left[\\begin{array}{ccccc} \n",
+    "\t         0                     & 0 & 0 & \\cdots & 0 \\\\ \n",
+    "\t         -\\frac{a_{21}}{a_{22}} & 0 & 0 & \\cdots & 0 \\\\\n",
+    "\t         \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    "\t         -\\frac{a_{n1}}{a_{nn}} & -\\frac{a_{n2}}{a_{nn}} & \\cdots & -\\frac{a_{n \\,n-1}}{a_{nn}} & 0\\\\\n",
+    "\t         \\end{array} \\right]\n",
+    "             \\left[\n",
+    "    \\begin{array}{c} \n",
+    "\t         x_1^{(k+1)} \\\\ \n",
+    "\t         x_2^{(k+1)} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         x_n^{(k+1)} \\\\\n",
+    "\t\\end{array} \n",
+    "\\right]\n",
+    "+\n",
+    "\\left[\\begin{array}{ccccc} \n",
+    "\t         0&  -\\frac{a_{12}}{a_{11}}& -\\frac{a_{13}}{a_{11}}& \\cdots &-\\frac{a_{1n}}{a_{11}} \\\\ \n",
+    "\t         0& 0& -\\frac{a_{23}}{a_{22}} & \\cdots & -\\frac{a_{2n}}{a_{22}} \\\\\n",
+    "\t         \\vdots & \\vdots & \\vdots & \\vdots & \\vdots \\\\\n",
+    "\t         0& 0& 0& \\cdots& 0\\\\\n",
+    "\t         \\end{array} \\right]\n",
+    "\\left[\\begin{array}{c} \n",
+    "\t         x_1^{(k)} \\\\ \n",
+    "\t         x_2^{(k)} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         x_n^{(k)} \\\\\n",
+    "\t\\end{array} \\right]\n",
+    "+\n",
+    "\\left[ \\begin{array}{c} \n",
+    "\t         \\frac{b_1}{a_{11}} \\\\ \n",
+    "\t         \\frac{b_2}{a_{22}} \\\\\n",
+    "             \\vdots\\\\\n",
+    "\t         \\frac{b_n}{a_{nn}} \\\\\n",
+    "\t\\end{array} \\right]$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ou \n",
+    "$$ x^{(k+1)} = P x^{(k+1)} + Q x^{(k)} + g$$\n",
+    "\n",
+    "$$ (I-P)x^{(k+1)} = Q x^{(k)} + g$$\n",
+    "\n",
+    "$$ x^{(k+1)} = (I-P)^{-1}Q x^{(k)} + (I-P)^{-1}g$$\n",
+    "\n",
+    "Fazendo-se $H = (I-P)^{-1}Q$ e $g' =(I-P)^{-1}g$ o processo iterativo torna-se\n",
+    "\n",
+    "$$x^{(k+1)} = H x^{(k)} + g'$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Agora usando operações vetoriais com Numpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.0203  0.2715  0.2559  0.2039  0.0885]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([0.,0.,0.,0,0])\n",
+    "x_ant = x.copy()\n",
+    "eps = 0.001\n",
+    "\n",
+    "A = np.array([[5,1,2,1,-1],\n",
+    "              [0,6,1,1,-1],\n",
+    "              [0,1,-3,2,1],\n",
+    "              [3,0,2,7,0],\n",
+    "              [1,1,0,0,8]])\n",
+    "b = np.array([1,2,0,2,1])\n",
+    "\n",
+    "n = len(A)\n",
+    "for k in range(10):\n",
+    "    for i in range(n):\n",
+    "        x[i] = (b[i] - np.dot(A[i,0:i],x[0:i])-np.dot(A[i,i+1:n],x[i+1:n]))/A[i,i]\n",
+    "\n",
+    "print (np.round(x,4))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0.2     0.3333  0.1111  0.1683  0.0583]\n",
+      "[ 0.0669  0.2965  0.2304  0.1912  0.0796]\n",
+      "[ 0.0262  0.2763  0.2461  0.2042  0.0872]\n",
+      "[ 0.0229  0.2728  0.2561  0.2027  0.088 ]\n",
+      "[ 0.0201  0.2715  0.255   0.2043  0.0886]\n",
+      "[ 0.0205  0.2715  0.2562  0.2037  0.0885]\n",
+      "[ 0.0202  0.2714  0.2558  0.204   0.0886]\n",
+      "[ 0.0203  0.2715  0.256   0.2039  0.0885]\n",
+      "[ 0.0202  0.2714  0.2559  0.2039  0.0885]\n",
+      "[ 0.0203  0.2715  0.2559  0.2039  0.0885]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy.linalg import inv\n",
+    "\n",
+    "\n",
+    "x = np.array([0.,0.,0.,0,0])\n",
+    "\n",
+    "eps = 0.001\n",
+    "A = np.array([[5,1,2,1,-1],\n",
+    "              [0,6,1,1,-1],\n",
+    "              [0,1,-3,2,1],\n",
+    "              [3,0,2,7,0],\n",
+    "              [1,1,0,0,8]])\n",
+    "b = np.array([1,2,0,2,1])\n",
+    "\n",
+    "n = len(A)\n",
+    "P = np.zeros((n,n))\n",
+    "Q = np.zeros((n,n))\n",
+    "g = np.zeros(n)\n",
+    "\n",
+    "\n",
+    "for i in range(n):\n",
+    "    P[i,0:i] = -A[i,0:i]/A[i,i]\n",
+    "    Q[i,i+1:n] = -A[i,i+1:n]/A[i,i]\n",
+    "    g[i] = b[i]/A[i,i] \n",
+    "    \n",
+    "I = np.eye(n)\n",
+    "H = np.dot(inv(I-P),Q)\n",
+    "g = np.dot(inv(I-P),g)\n",
+    "\n",
+    "\n",
+    "for k in range(10):\n",
+    "    x = np.dot(H,x) + g\n",
+    "    \n",
+    "    print (np.round(x,4))\n",
+    "\n"
    ]
   },
   {
