--- a/6_APROXIMACAO_DE_FUNCOES/6.3_ajuste_linear_nos_parametros.ipynb
+++ b/6_APROXIMACAO_DE_FUNCOES/6.3_ajuste_linear_nos_parametros.ipynb
@@ -3,6 +3,105 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# 6.3 Ajuste linear nos parâmetros\n",
+    "\n",
+    "Uma função do tipo \n",
+    "\n",
+    "$$ g(x) = a_1 g_1(x) + a_2 g_2(x) + ... + a_n g_n(x)$$\n",
+    "\n",
+    "é dita um _modelo de regressão linear_. O adjetivo \"linear\" é usado para indicar que o modelo é linear nos parâmetros $a_1$, $a_2$,..., $a_n$ e não porque é um função linear de $x$. Por exemplo, uma expressão da forma\n",
+    "\n",
+    "$$ y = a_1 + a_2 log(x) + a_3 x^3 $$ \n",
+    "\n",
+    "é um modelo de regressão linear múltipla, mas o mesmo não acontece com a equação \n",
+    "\n",
+    "$$y =a_1 + a_2 x^{a_3} + a_4 x^2$$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.5  0.   0.5  1.   1.5  2.   2.5  3.   3.5  4.   4.5]\n",
+      "71.5 2.0 5.0\n",
+      "36.75 3.5\n",
+      "[ 0.5  0.5]\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAEACAYAAACwB81wAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xl8lNXZ//HPFRYXRNxahKigcd/RyvKjalxQQAXXRxCk\noK1oWVr3lpoGHp5qrdKWpRXxQVAWRXFDUQsURlAKpEAUFRBjAAnCY8Wl7EjO748z0AAJJMw9c8/M\n/X2/Xnk5k9wz54roNYfrPuc65pxDRESyX07YAYiISGoo4YuIRIQSvohIRCjhi4hEhBK+iEhEKOGL\niEREwgnfzA4ws7lmttDMFplZYRXXDTGzZWZWbGbnJjquiIjUTO1E38A5t8XMLnHObTSzWsB7ZvaW\nc27ejmvMrB2Q55w7ycxaAMOBlomOLSIi1RdIScc5tzH+8AD8h8juu7k6As/Gr50LNDCzhkGMLSIi\n1RNIwjezHDNbCKwBpjrnina7JBf4vMLzsvj3REQkRYKa4Zc755oBxwAtzOz0IN5XRESCk3ANvyLn\n3HdmNgNoC3xc4UdlwLEVnh8T/94ezEzNfUREasg5Z/u6JohVOkeZWYP444OANsCS3S6bBHSLX9MS\n+MY5t7aq93TOZeVXYWFh6DHo99Pvp98v+76qK4gZfiPgGTPLwX+ATHDOvWlmPX3udiPiz9ub2afA\nBqBHAOOKiEgNBLEscxFwXiXff3K3570THUtERPafdtqmUH5+ftghJJV+v8ym3y/7WU3qP6lgZi7d\nYhIRSWdmhkvFTVsREckMSvgiIhGhhC8iEhFK+CIiEaGELyISEUr4IiIRoYQvIhIRSvgiIhGhhC8i\nEhFK+CIiEaGELyISEUr4IiIRoYQvIhIRSvgiIhGhhC8iEhFK+CIiEaGELyISEUr4IiIRoYQvIhIR\nSvgiIhGhhC8iEhEJJ3wzO8bMppvZR2a2yMz6VnLNxWb2jZktiH89lOi4IiJSM7UDeI/vgXucc8Vm\ndggw38ymOOeW7HbdTOdchwDGExGpthWlpYwuKKC8rIyc3Fy6DxxIk+OPDzusUCSc8J1za4A18cfr\nzWwxkAvsnvAt0bFERGpiRWkpQ9u0YUBJCfWADcBv/zGHy4e+Q/H7uaxZA61bw4UXQqNGYUebfIHW\n8M2sKXAuMLeSH7cys2Izm2xmpwc5rohIZUYXFDCgpARHPV6jA3fzJM9/FqPLzbX54gto3BjGjoUz\nzoCTToLbboPRo2HjxrAjT44gSjoAxMs5E4FfOOfW7/bj+cBxzrmNZtYOeBU4uar36t+//87H+fn5\n5OfnBxWmiERIeVkZ73IFXRjHObzPVUzmXgYx7ke5/PeQ6f+5rhw++ghmzYIXX4Tf/x7GjIELLggx\n+L2IxWLEYrEav86ccwkPbma1gTeAt5xzg6txfSlwvnNuXSU/c0HEJCJydfNRFBW14yVu5Me8B/iy\nzuNdulA4dmyVr5swAfr2hZ//HPr1gzp1UhTwfjIznHP7LJsHVdJ5Gvi4qmRvZg0rPG6O/6DZI9mL\niARh+3a4+25Y/FUXrjnuFppVSPaFeXl0Hzhwr6+/+WZYsABmz/Y1/qVLUxB0CiQ8wzez1sBMYBHg\n4l/9gCaAc86NMLNewF3ANmATcLdzrrI6v2b4IpKQ9evhlltgwwaYOBG++ya+Smf1anIaN67RKh3n\n4K9/hcJCePhhuOOOJAe/n6o7ww+kpBMkJXwR2V9lZXD11XD++fDEE8GVYpYuhauugl69/N8c0k11\nE35gN21FRMK0dSt07AjXXQcFBWABLgQ/5RSYPh3y8/2HSO/ewb13Kinhi0hWeOghyM0NPtnvcNxx\nuyb9nj2DHyPZlPBFJONNnQrjx0NxcXKS/Q5Nm8Lf/+6Tfu3acPvtyRsrGZTwRSSjffkldO/u180f\ndVTyx8vL80n/0kt90v/JT5I/ZlCU8EUkYzkHPXpAt24+AafKySf7v1VcdhkccQRcc03qxk6EVumI\nSMYaMgTGjYN33w1nc9TixXD00XD44akfuyItyxSRrPb++3D55TBnji+zRFmqd9qKiKTM5s3QuTP8\n6U9K9jWhGr6IZJxhw3x3y65dw45kV+nee18lHRHJKOvW+Y1Qs2bBqaeGHc1/VNZ7vzAvjz5TpyY9\n6aukIyJZ6ZFH4IYb0ivZw39679eLP68HDCgpYXRBQZhh7UIlHRHJGMuXw9NPw4cfhh3JnsrLynYm\n+x3qAeWrV4cRTqU0wxeRjFFQ4PvYpONxhDm5uWzY7XsbgJzGjcMIp1Kq4YtIRli4ENq3h08+gfr1\nw45mT5lQw1fCF5GMcMUVcO21/hSqdLVzlc5+9N5PhBK+iGSNKVN8Keejj9L/uMEwaJWOiGSF8nJ4\n8EG/OkfJPjFK+CKS1saPhwMPhOuvDzuSzKeSjoikre3b4bTT4Mkn4ZJLwo4mfamkIyIZ79VXffvh\n/PywI8kOSvgikpacg0cf9fX7ZJ5iFSVK+CKSlmbOhG+/hQ4dwo4keyjhi0ha+sMf4L77oFatsCPJ\nHgknfDM7xsymm9lHZrbIzPpWcd0QM1tmZsVmdm6i44pI9lq0yO+svfXWsCPJLkE0T/seuMc5V2xm\nhwDzzWyKc27JjgvMrB2Q55w7ycxaAMOBlgGMLSJZ6LHHoG9fvxxTgpPwDN85t8Y5Vxx/vB5YDOTu\ndllH4Nn4NXOBBmbWMNGxRST7rFwJb7wBd94ZdiTZJ9Aavpk1Bc4F5u72o1zg8wrPy9jzQ0FEhD//\nGW67DQ47LOxIsk9g/fDj5ZyJwC/iM/391r9//52P8/PzydciXJFIWLcORo+GDz4IO5L0FovFiMVi\nNX5dIDttzaw28AbwlnNucCU/Hw7McM5NiD9fAlzsnFtbybXaaSsSUb/7HXz6KYwaFXYkmSXVO22f\nBj6uLNnHTQK6xQNrCXxTWbIXkejatAmGDvVLMSU5Ei7pmFlroAuwyMwWAg7oBzQBnHNuhHPuTTNr\nb2af4s8F6JHouCKSXcaNg/PPhzPOCDuS7KXmaSISOufg3HP9cswrrgg7msyj5mkikjFmzoStW6FN\nm7AjyW5K+CISuqFD/YlWapKWXCrpiEioVq6EZs1g+fL0PJw8E6ikIyIZ4YknoFs3JftU0AxfREKz\naRM0aQKzZ8OJJ4YdTebSDF9E0t5zz0Hz5kr2qaKELyKhcA6GDIE+fcKOJDqU8EUkFLNmwebNWoqZ\nSkr4IpJSK0pLGdC1K3feGOOE+s/w+YrSsEOKDN20FZGUWVFaytA2bfhZyRZa8T4f04TH8xrSZ+pU\nmhx/fNjhZSzdtBWRtDO6oIABJSU8w13cyhiOZj0DSkoYXVAQdmiREFg/fBGRfSkvKyOHA/lffsp7\ntAagHlC+enW4gUWEZvgikjI5ubk8QycuoIiT+BTw7XNzGjcON7CIUA1fRFJm+WelND9tEyO23sO1\n/I0NQGFenmr4CapuDV8lHRFJmVWrj6d+7lYWtvoBC7+4hJzGjekzcKCSfYpohi8iKfNf/wUXXqjN\nVkGr7gxfCV9EUmLVKjj7bN8V89BDw44mu2hZpoiklSeegK5dlezDpBm+iCTd5s1w3HHw7rtw8slh\nR5N9NMMXkbTx/PP+gHIl+3Ap4YtIUu3oitm3b9iRiBK+iCTV7Nmwfj1ceWXYkYgSvogk1ZAh/oDy\nHGWb0AXyR2BmI81srZl9UMXPLzazb8xsQfzroSDGFZH0tmoVTJ0K3buHHYlAcDttRwFDgWf3cs1M\n51yHgMYTSZkVpaWMLijwjb9yc+munaHV9pe/QJcuWoqZLgJJ+M65d82syT4u2+eSIZF0s6N/+4CS\nEurhG331m13MOf2mUTT/aGbPhlNPhYsu8jtIzzxTpYsdvvsOnnoKiorCjkR2SOV/mq3MrNjMJpvZ\n6SkcV2S/7ejfvpGjGEYvbmIyo0pnM/ChdZxwAowYAVddBQsXwk03wVFHwTXXwNixfnVKlD31lD++\nUH8ZSh+pap42HzjOObfRzNoBrwJVrsjt37//zsf5+fnk5+cnOz6RSpWXlbGUZnTkNS7mHXowiufo\nzB9PP5/7758OQIsW0K2bv37NGpg5Ex5+GF54wSe9hg1D/AVCsnUr/OlP8PrrYUeSnWKxGLFYrMav\nC2ynbbyk87pz7uxqXFsKnO+cW1fJz7TTVtJG54v/yNSZt/Ikd3IDLwO+rPN4ly4Ujh1b5eu2boX+\n/WHUKBg+HDp2TE286WL0aBg/HqZMCTuSaAhjp61RRZ3ezBpWeNwc/0GzR7IXSRfOwaBBMGNpX67M\n7UnbCsm+MC+P7gMH7vX1dev6Wf7EiXDPPXD77b6mHQXl5fDYY/DAA2FHIrsLpKRjZuOBfOBIM1sJ\nFAJ1AeecGwHcaGZ3AduATcDNQYwrkgzbtvn2vbNnw7x5tXHbB/F4wcGUr15d4/7trVtDcTHcey+c\ney5MmuRv7GazyZPhgAPgssvCjkR2p+ZpIhVs2uTLL7Vr+/4vQS4nHDvWz3r//nc47bTg3jfdXHgh\n9OoFnTqFHUl06MQrkf1w330+yT//vE/6Qera1Zc72rSB6dOzs5HY7NlQVgY33hh2JFIZJXyRuNde\ngzff9Essg072O3TrBt9/D5dfDjNmQF5ecsYJy2OP+fJVsv79SWL0xyKCn5XecQe88gocdlhyx7rt\nNn+f4LLLIBaDpk2TO16qLFniZ/jjxoUdiVRFCV8ib/t2X27p0wf+3/9LzZg9e/qkf+ml8M47cOyx\nqRk3mR5/3NfuDz447EikKkr4EnmPPuqXYf7616kdt3dvn/QvvxzmzIHDD0/t+EFavtz/7Wjp0rAj\nkb3RKh2JtDlz/Kqcf/4zvFn2vff6pZtvvw116oQTQ6K6doUTT/SbzST1qrtKRwlfIuvbb6FZM7/B\n6rrrwotj+3b/oXPMMf6gb8uwNoMLF0L79vDJJ1C/ftjRRJMSvsg+3Hab3xE7fHjYkfhduK1b+xvH\nffqEHU3NtGkD118Pd90VdiTRpXX4InuxcCG89ZaflaaDQw/1jcZatYJD669h+bT7MqL//pQpsHIl\n/PSnYUci1aEZvkTSFVf4MkqvXmFHsquXXlzNrZ0OYGb5hfyIxTt79/SZOjXtkn55OZx3HhQUwA03\nhB1NtIXRPE0kI0yZ4leV3HFH2JHs6cPXHmBw+d3czOv8iyOpBwwoKWF0QUHYoe1h3Dg46CBfzpHM\noJKOREp5OTz4oO9kmY4rYsrLyvgZMT7jNG7gJabShnpso3z16rBD28XmzfDQQz7pZ9pN5ijTDF8i\nZfx438kxXUsQObm5bAB+x284gnXcyXDWAzmNG4cd2i6GDfMrnH7847AjkZpQDV8iY/Nmf/7smDG+\no2M6qniGrqMerZnF4Ue+zTNFndKmhv/1177x28yZ2d31M5NoWabIbgYN8knqtdfCjmTvVpSWMrqg\ngPLVq/l3gzMZ/48/8tRTtbnmmrAj8/r29R+eI0aEHYnsoIQvUsHXX8Mpp/hmZaefHnY0NTNvHlx9\nNUybBmfv8wDR5HrrLd8HqLgYjjgi3FjkP7RKR6SCRx7xyzAzLdkDNG8OQ4ZAhw6wdm14caxZ4zer\njRmjZJ+pNMOXrPf55/54wUWLIM3ufdZIYaFfUjptGtSrl9qxy8uhXTv/4bOP43wlBCrpiMT98pd+\nCeZjj4UdSWKc84ehL18Ob7yR2jbEgwbBSy/5eyA63CT9KOGLAF99BSed5Gf3ublhR5O47duhe3df\n2pk0CQ48MPljzp8PbdtCUVH2HNaSbVTDFwH++le49trsSPYAtWrBqFFw5JF+h+uWLckdb/166NwZ\nhg5Vss8GmuFL1tq0ySepWCz71otv2+YT8datMHGi7/qZDD16+H+OGpWc95dgaIYvkTd6NLRsmX3J\nHvw9ifHjfVuDTp38B0CQysvhgQdg7lw/u5fsEEjCN7ORZrbWzD7YyzVDzGyZmRWb2blBjCtSle+/\n92esPvBA2JEkT9268MILvqzTvr0/iD0IGzb41hNz58KsWXDIIcG8r4QvqBn+KODKqn5oZu2APOfc\nSUBPIA2OnJBs9vLL0KiRP1Qkmx1wALz6qu9pc955MGFCzd9jRWkpA7p2pfCSS7j3+t60bLmFBg1g\n6lR/r0CyR2A1fDNrArzunNtjL6CZDQdmOOcmxJ8vBvKdc3tsI1ENXxLlHFxwAfz2t36zUlQUFcGt\nt/rE/5e/VO9Q9Iq9e5ZxDtcwiaZHvMiYoutpekJ69O6RfUu3Gn4u8HmF52Xx74kEbvp02LjRtyOI\nkgsugAUL/Kz8nHP8DH1fRhcU8EDJF7xMV9owlUHcx9vr7uOZ36Zf/31JXFpuoejfv//Ox/n5+eTn\n54cWi2SeP/wB7r8fciK4JOHgg/1N1g4d4Gc/89+76CLfHfSii3yXSzMoKYE334Qxb/blcZ7gAop4\ng6tpwTyAtOu/L7uKxWLEYrEavy6sks4S4GKVdCRoxcVw1VXw2We+vh1lzsHSpX537KxZ/p+bN0OD\nBv7Q9PbtYcOng/nzrAIa8e+dr9sAPN6lC4Vjx4YXvNRIynfamllTfMI/q5KftQd6OeeuMrOWwJ+d\ncy2reB8lfNlvXbr4vjn33x92JOlpxQrfOfTss/3fgCrW8OtBWp+hK1VLacI3s/FAPnAksBYoBOoC\nzjk3In7NMKAt/r+pHs65BVW8lxK+7JdVq3wiKy31s1ipnor993MaN6b7wIFK9hlGvXQkch56CL79\nVhuFJHqU8CVSNm+GJk18nfqUU8KORiS10m1ZpkhSTZjgD9VWshepmhK+ZDznfBmnT5+wIxFJb0r4\nkvH+8Q/45ht/IpOIVE0JXzLe0KHQu3c0N1qJ1IRu2kpGW70azjxTSzEl2nTTViJh+HB/EIiSvci+\naYYvGWvLFr8Uc8aM7DzkRKS6qjvDT8vmaSJ7s2NnaPH80zkk52oOPrA+oJ2hIvuiko5klB29X+4d\nN45VS9rw+y/6MbRNG1aUloYdmkjaU8KXjDK6oIABJSV8SAu+5nCu500GlJQwukD920X2RQlfMkp5\nWRn1gKH0oRd/IQdHPdS/XaQ6lPAlo+Tk5vIpjXiLdvRgFODbr+Y0bhxuYCIZQKt0JKOsKC2l0/lv\ncObXtXiKXurfLoK6ZUqW2rIFjj32e25q0Y+jNvxT/dtFUMKXLDV2LDzzTPUO6BaJCu20law0dCj0\n7Rt2FCKZSQlfMsbcufDll/7wbRGpOSV8yRg7umLWqhV2JCKZSTV8yQhr1vh+OaWlcNhhYUcjkl5U\nw5es8uST0KmTkr1IIjTDl7S3davvijltGpxxRtjRiKQfzfAla7z4ok/0SvYiiQkk4ZtZWzNbYmaf\nmNmDlfz8YjP7xswWxL8eCmJciQYdUC4SjIT74ZtZDjAMuAxYDRSZ2WvOuSW7XTrTOdch0fEy0Y7+\n7eVlZeTk5u6yM3TLFjCDunVDDjJNvfeeX4p59dVhRyKS+YI4AKU5sMw5twLAzJ4HOgK7J/x91pey\n0Y7+7QNKSqiHb/R196wVNPnZK8yZexTvvAPOwY9+BBddBBdeCK1aQb16YUeeHv7wB7jvPi3FFAlC\nECWdXODzCs9Xxb+3u1ZmVmxmk83s9ADGzQg7+rd/z6H8modpyQe8vPJlXhi5hFtugeXLYdUqeOAB\nf3Oyf3/44Q+hdWuYMyfs6MO1eLH/d9C9e9iRiGSHVB1xOB84zjm30czaAa8CJ1d1cf/+/Xc+zs/P\nJz8/P9nxJU15WRlf0oSrmExz5jGCO2jOPP77+Ivp3Hn6zuvatfNfAJs2wSuvQMeO0LMnFBRAnToh\n/QIhevxxv9HqoIPCjkQkvcRiMWKxWI1fl/CyTDNrCfR3zrWNP/8V4Jxzj+7lNaXA+c65dZX8LKuW\nZf60bSGT/9aTfjxCH4YBvqzzeJcuFI4du9fXfvEF3H47/N//wZgx0Tqou6wMzjoLli2DI48MOxqR\n9JbKZZlFwIlm1sTM6gKdgEm7BdOwwuPm+A+aPZJ9tpkwAV79529pdfRvua1Csi/My6P7wIH7fH2j\nRjB5Mvz0p76+P2QIlJcnOeg0MXgwdOumZC8SpEA2XplZW2Aw/gNkpHPu92bWEz/TH2FmvYC7gG3A\nJuBu59zcKt4r42f4zsHDD/vdoa+/DocdGl+ls3r1fvdvX7bMJ8BGjeD557N7Vc+338IJJ8CCBX7D\nlYjsnfrhh6h3b3+z8fXXfYIOytatcOONPtk/91z21vUffRQWLfK970Vk35TwQ/Lcc36lzfz5cMgh\nwb//li1w3XVw6KE+IdZO1W33FNmyBY4/Ht5+G84+O+xoRDKDWiuEoLTUH87x3HPJSfYABxwAL78M\n69ZBjx6wfXtyxgnL2LFwzjlK9iLJoBl+QLZt8zdWb7oJ7rkn+eNt3Oh3nzZpAiNHQk4WfHSXl8Pp\np8MTT8All4QdjUjm0Aw/xQYMgAYN4Je/TM14Bx/s7xGUlMCdd2bH6p1Jk6B+fcjgbRciaU0JPwCx\nGDz9tD9cO5Uz7Xr1/LLNDz7w9w0yWXm5/x369fO9hUQkeEr4CfrqK7j1Vp/wGzbc9/VBq1/fz4yf\nfRbGj0/9+EEZN87vqL322rAjEclequEnwDm/YiYvDwYNCjeWDz6Ayy7zZZ6WLcONpaY2b4ZTTvFJ\n/8c/DjsakcyjGn4KPPccrFjhN1mF7eyz/d8ybrgBVq4MO5qaGTYMmjVTshdJNs3w99PmzXDqqb7H\nzYUXhh3NfwwaBCNHbuHas35Onf/7bI/+++lm3To/u585M1q9gkSCpI1XSTZokE9Sr70WdiS7Wv5Z\nKdec+0+a/rsOr3E9m3AU5uXRZ+rUtEz6998P333n21CIyP5Rwk+ir7/2s9JYzK8bTycDunal77gX\nuJaptGQOj/KranfnTLUVK+C88+DDD4NtQSESNarhJ9Ejj/jVJOmW7MH33z+cbbzEDUzkRp6hG/WA\n8tWrww5tDwUF0KuXkr1IqmRZJ5bkW7nS72xdtCjsSCqXk5vLBuAovuJ1riGfGI0pIadx47BD20Vx\nMUyZ4ruAikhqqKRTQz/5CRx3HFSjnX0odj9D91WupGutZ3l7+hZ+fNGxYYe305VXQocOfoYvIolR\nDT8J3n/fJ6pPPvHdKtPVitJd++9z4mBenHgks2enR9wTJ8JvfuNr99na4lkklZTwk6BtW9+wrHfv\nsCOpGefg5z/35ahJk6BWrfBiWbkSfvQjeOMNaN48vDhEsolu2gZs2jT49FO4446wI6k5M3884pYt\nfhlkWLZvh65dfTdRJXuR1FPCrwbn4Fe/8jtqM/VowTp14MUXfbO1IUPCieF3v/P//h54IJzxRaJO\nq3SqYdo0v7P2xhvDjiQxhx8Of/ubbz9ct65vq5wq770Hf/2rP6c2G3r3i2QiJfxqePRRXwrJhkTV\ntCn8/e/+gJE6deD225M/5jffQJcu8NRTkGarQ0UiRQl/H+bPh6VLoXPnsCMJTl7erkm/W7fkjeUc\n9OwJ11zjv0QkPEr4+/DYY3D33Zlbu6/KSSf5UtWll/qD0G+5JTnjjBwJixf7w2FEJFxK+Hvx2Wc+\nKT71VNiRJMepp/rdrm3a+Jn+TTcF+/5Dh/o2FNOmwYEHBvveIlJzgVSlzaytmS0xs0/M7MEqrhli\nZsvMrNjMzg1i3GQbNMgvw6xfP+xIkufMM+Htt+EXv4AHH/RLNxP1/ffQpw8MH+5v1qZjzyGRKEp4\n45WZ5QCfAJcBq4EioJNzbkmFa9oBvZ1zV5lZC2Cwc67Sc5nSZePVl1/6jpgffwxHHx12NMn35Zf+\nw+2zz2DsWDjrrOq/dufO3rIytv7wROasHUydugfz4ov+YHcRSa7qbrwKoqTTHFjmnFsRH/h5oCOw\npMI1HYFnAZxzc82sgZk1dM6tDWD8pBg2zJc4opDsAX7wA3j5ZV9rv/RSv1b+nnv2vSu3Yu+erziW\n9gym1qGv8lJRKxo0SL/++yJRFkRJJxf4vMLzVfHv7e2askquSRsbNsATT8C994YdSWqZQffuUFTk\nWx9ccgnMm+dLNFUZXVDA7SXbeIa7aMU/uJ1RvPddF8b9d0HK4haR6knLm7b9+/ff+Tg/P5/8/PyU\njj9ypD+28OSTUzps2mjaFKZPh8GDoUcPWLUKWrWCiy7y/16aNfPLVSdPhtGv/A/DqEc73mIMt3Ip\nM4D07L8vki1isRixWKzGrwuiht8S6O+caxt//ivAOecerXDNcGCGc25C/PkS4OLKSjph1/C3bfNL\nFidMgBYtQgsjrfzrX/DuuzBrlj/W8f33/aHp7dvDF/MKGfS3/+FQynden64nbIlkq5R1yzSzWsBS\n/E3bL4B5QGfn3OIK17QHesVv2rYE/pyuN23Hj4cRI/zxhVK57dv/U9vfvf/+BkjrM3RFslFK2yOb\nWVtgMP6ewEjn3O/NrCd+pj8ifs0woC0+J/Rwzi2o4r1CTfgtWkC/ftCxY2ghZJzd++93HzhQyV4k\nhdQPfz/MnQudOvk2yGH2jBcRqQn1w98PQ4f6w02U7EUkG2mGH7dmDZx2mt94dPjhKR9eRGS/aYZf\nQ08+CTffrGQvItlLM3xg61a/9nzqVDjjjJQOLSKSMM3wa2DiRF/OUbIXkWymhI+/Wdu3b9hRiIgk\nV+QTflGRv2F79dVhRyIiklyRT/hDh0KvXlqKKSLZLy2bpyXbjp2h35Vu5MV/juHeu/8FNAk7LBGR\npIrcDH9H75f7xo3jsNln0HnrWMbcdBkrSkvDDk1EJKkil/BHFxQwoKSEOtThCe7iboYxoKSE0QXq\n3y4i2S1yJZ3ysjLqAVswhtGbs/jQf1/920Uky0Vuhp+Tm8sG4AC2cj2vAL59Z07jxqHGJSKSbJFL\n+N0HDqQwL48N8ec7+rd3HzgwzLBERJIukq0V1L9dRLKJ+uGLiESEeumIiMgulPBFRCJCCV9EJCKU\n8EVEIkIJX0QkIpTwRUQiIqHWCmZ2ODAB32pyOfBfzrlvK7luOfAtUA5sc841T2RcERGpuURn+L8C\npjnnTgGmA7+u4rpyIN851yzKyT4Wi4UdQlLp98ts+v2yX6IJvyPwTPzxM8C1VVxnAYyV8bL9Pzj9\nfplNv18ARgl1AAADg0lEQVT2SzQJ/9A5txbAObcG+GEV1zlgqpkVmdnPEhxTRET2wz5r+GY2FWhY\n8Vv4BP5QJZdX1ROhtXPuCzP7AT7xL3bOvVvjaEVEZL8l1EvHzBbja/NrzexoYIZz7rR9vKYQ+Ldz\n7o9V/FyNdEREaqg6vXQSPQBlEtAdeBT4CfDa7heY2cFAjnNuvZnVA64ABlT1htUJWkREai7RGf4R\nwAvAscAK/LLMb8ysEfCUc+5qMzseeAVf7qkNjHPO/T7x0EVEpCbSrj2yiIgkR9otlTSzG83sQzPb\nbmbnhR1PUMysrZktMbNPzOzBsOMJkpmNNLO1ZvZB2LEkg5kdY2bTzewjM1tkZn3DjikoZnaAmc01\ns4Xx360w7JiSwcxyzGyBmU0KO5agmdlyM3s//mc4b2/Xpl3CBxYB1wHvhB1IUMwsBxgGXAmcAXQ2\ns1PDjSpQo/C/W7b6HrjHOXcG0ArolS1/fs65LcAlzrlmwLlAOzPLxs2RvwA+DjuIJKn2xta0S/jO\nuaXOuWX45Z/ZojmwzDm3wjm3DXgev2ktK8SX2H4ddhzJ4pxb45wrjj9eDywGcsONKjjOuY3xhwfg\n77NlVZ3XzI4B2gP/G3YsSVLtja1pl/CzVC7weYXnq8iihBElZtYUPxOeG24kwYmXOxYCa4Cpzrmi\nsGMK2J+A+8myD7IKqr2xNdFlmftlL5u5fuOcez2MmET2xcwOASYCv4jP9LOCc64caGZmhwKvmtnp\nzrmsKH+Y2VXAWudcsZnlk12Vgx2qvbE1lITvnGsTxrghKgOOq/D8mPj3JEOYWW18sh/jnNtjv0k2\ncM59Z2YzgLZkT727NdDBzNoDBwH1zexZ51y3kOMKjHPui/g/vzSzV/Al5EoTfrqXdLLl07gIONHM\nmphZXaATftNaNjGy58+rMk8DHzvnBocdSJDM7CgzaxB/fBDQBlgSblTBcc71c84d55w7Af//3fRs\nSvZmdnD8b55U2Nj6YVXXp13CN7NrzexzoCXwhpm9FXZMiXLObQd6A1OAj4DnnXOLw40qOGY2HpgN\nnGxmK82sR9gxBcnMWgNdgEvjS98WmFnbsOMKSCNghpkV4+9L/M0592bIMUn1NQTejd+DmQO87pyb\nUtXF2nglIhIRaTfDFxGR5FDCFxGJCCV8EZGIUMIXEYkIJXwRkYhQwhcRiQglfBGRiFDCFxGJiP8P\nSQgp3FHptj4AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x7f7375ce2fd0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "% matplotlib inline\n",
+    "import numpy as np\n",
+    "from scipy.linalg import solve\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "X = np.array([-0.5, 0.0, 0.5, 1.0, 1.5, 2.0, 2.5, 3.0, 3.5, 4.0, 4.5])\n",
+    "Y = np.array([-0.25, 0.5, 0.25, 0.0, 0.75, 1.5, 1.25, 1.00, 1.75, 2.5, 2.25])\n",
+    "\n",
+    "# Calcula os elementos das marizes\n",
+    "g1 = lambda X: X\n",
+    "g2 = lambda X: np.cos(np.pi*X)\n",
+    "\n",
+    "print (g1(X))\n",
+    "a11 = np.sum(np.multiply(g1(X),g1(X)))\n",
+    "a12 = np.sum(np.multiply(g1(X),g2(X)))\n",
+    "a21 = a12\n",
+    "a22 = np.sum(np.multiply(g2(X),g2(X)))\n",
+    "\n",
+    "print (a11, a12, a22)\n",
+    "\n",
+    "b1 = np.sum(np.multiply(Y,g1(X)))\n",
+    "b2 = np.sum(np.multiply(Y,g2(X)))\n",
+    "\n",
+    "print (b1,b2)\n",
+    "\n",
+    "\n",
+    "# Monta e resolve o sistema\n",
+    "A = np.array([[a11, a12],\n",
+    "              [a21, a22]])\n",
+    "\n",
+    "B = np.array([b1,b2])\n",
+    "\n",
+    "a = solve(A, B)\n",
+    "print (a)\n",
+    "\n",
+    "# define a funcao g(x) para plotar \n",
+    "g = lambda X: a[0]*g1(X)+a[1]*g2(X)\n",
+    "\n",
+    "# cria pontos (x, y) da reta \n",
+    "Xr = np.arange(X[0], X[-1], 0.1)\n",
+    "Yr = g(Xr)   \n",
+    "\n",
+    "# Plota os pontos e a reta\n",
+    "plt.plot(X, Y, \"ro\", Xr, Yr, \"-\") \n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
