--- a/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
+++ b/1_INTRODUCAO_ERROS/1.1_conceitos_basicos_e_aritmetica_de_ponto_flutuante.ipynb
@@ -19,24 +19,55 @@
     "Os erros na fase de modelagem podem ser decorrentes de medições imprecisas, erros de anotação, simplificações e deduções equivocadas. Os erros na fase de resolução ocorrem devido a erros de cálculo, escolha de um método ineficaz, aproximações numéricas ou arredondamentos. Dizemos que métodos analíticos de resolução geram soluções exatas e métodos numéricos geram soluções aproximadas. \n",
     "\n",
     "A maioria dos problemas envolvendo fenômenos reais produzem modelos matemáticos cuja solução analítica é difícil (ou impossível) de se obter, mesmo quando provamos que a solução existe. Nesses casos usamos **métodos numéricos**, os quais fornecem **soluções aproximadas**, que apesar de, em geral, serem diferentes da solução exata, podem ser suficientemete próximas para que sejam úteis em suas aplicações.  \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Representação de números em ponto flutuante\n",
     "\n",
-    "Os métodos numéricos são especialmente úteis quando utilizamos computadores para realizar o processamento numérico. No entanto a representação de números reais nas máquinas é feita, geralmente, utilizando o sistema de ponto flutuante normalizado e base binária. Ou seja, os números reais são armazenados em um conjunto fixo de bits. Cada bit pode assumir somente dois valores, 0 ou 1 (corte ou passagem de energia, respectivamente). \n",
+    "Os métodos numéricos são especialmente úteis quando utilizamos computadores para realizar o processamento numérico. No entanto, a representação de números reais nas máquinas é feita, geralmente, utilizando o **sistema de ponto flutuante normalizado** e **base binária**. Ou seja, os números reais são armazenados em um conjunto fixo de bits. Cada bit pode assumir somente dois valores, 0 ou 1 (corte ou passagem de energia, respectivamente). \n",
     "\n",
     "Por exemplo, o número $0.125$, na base decimal, pode ser escrito como \n",
     "\n",
     "$$0.125 = 1/10 + 2/100 + 5/1000$$\n",
+    "ou, equivalentemente, \n",
+    "$$0.125 = 1 \\times 10^{-1} + 2 \\times 10^{-2} + 5\\times 10^{-3}$$\n",
+    "\n",
     "\n",
     "da mesma forma que a fração binária, de valor idêntico, $0.001$ pode ser escrita como \n",
     "\n",
     "$$ 0.001 = 0/2+0/4+1/8$$\n",
     "\n",
-    "em que os denominadores das parcelas são potencias de $2$.\n",
+    "em que os denominadores das parcelas são potências de $2$, ou ainda,\n",
     "\n",
-    "No sistema de ponto flutuante normalizado (SPFN), um número é representado pela sua parte fracionária, expoente da base e sinal, como é ilustrado na figura abaixo\n",
+    "$$ 0.001 = 0\\times 2^{-1} +0 \\times 2^{-2} + 1\\times 2^{-3}$$\n",
+    "\n",
+    "No sistema de ponto flutuante normalizado (SPFN), um número é representado apenas pela sua forma fracionária (algarismos significativos), em que apenas um número finito de algarismos são armazenados, além do expoente da base e o sinal. Por exemplo, \n",
+    "o número $1.2345$, na base decimal, será representado como\n",
+    "\n",
+    "$$ 1.2345 = 0.12345 \\times 10^1$$\n",
+    "\n",
+    "em que 12345 são os algarismos significativos e 1 é o expoente da base 10.\n",
+    "\n",
+    "A maioria das máquinas que usamos atualmente operam na base 2 (binária) em que os algarismos disponíveis são 0 e 1. O número decimal $1.2$, pode ser representado na base binária pelo número $1.00110011001100110011 \\overline{0011}$ que tem infinitas casas após a vírgula, portanto nem todos algarismos significativos poderão ser armazenados. Supondo que apenas 10 algarismos podem ser armazenados, sua respresentação será\n",
+    "\n",
+    "$$ 0.1001100110 \\times 2^1$$\n",
+    "\n",
+    "No SPFN apenas os dígitos $1001100110$, o sinal (0 para positivo e 1 para negativo) e o expoente $1$  precisam ser armazenados. \n",
+    "\n",
+    "\n",
+    "## Padrão IEEE\n",
+    "Em geral, uma máquina com 32 bit utiliza 23 bit para armazenar os algarismos da parte fracionária, 8 bit para os algarismos do expoente da base e 1 bit para armazenar o sinal. Como é ilustrado na figura abaixo.\n",
     "\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/floatstructure.png\" width=\"360\">\n",
     "\n",
-    "O padrão IEEE 754 é atualmente o mais utilizado para representar números reais. Na precisão  <span style=\"font-family: courier;\">float</span> usa 32 bits, para a parte fracionária, 8 bits para o expoente e 1 bit para o sinal. Na precisão <span style=\"font-family: courier;\">double</span>, usa 52 bits, para a parte fracionária, 11 bits para o expoente e 1 bit para o sinal, o que permite representar valores entre  $2^{-1022}$ até $2^{1023}$. Alguns exemplos de representações do numero zero, infinito e \"não número\".\n",
+    "\n",
+    "\n",
+    "\n",
+    "O padrão IEEE 754 é atualmente o mais utilizado para representar números reais. Na precisão  <span style=\"font-family: courier;\">float</span> usa 23 bits, para a parte fracionária, 8 bits para o expoente e 1 bit para o sinal. Na precisão <span style=\"font-family: courier;\">double</span>, usa 52 bits, para a parte fracionária, 11 bits para o expoente e 1 bit para o sinal, o que permite representar valores entre  $2^{-1022}$ até $2^{1023}$. Alguns exemplos de representações do numero zero, infinito e \"não número\".\n",
     "\n",
     "<img src=\"https://github.com/tiagoburiol/NUMETHODS/raw/master/1_INTRODUCAO_ERROS/imagens/tabelafloat.gif\" width=\"400\">\n",
     "\n",
@@ -61,21 +92,21 @@
     "\n",
     "em que $a_i \\in \\{0,1,2,3,...,(b-1)\\}$, com $n$ e $m$ inteiros.\n",
     "\n",
-    "## Base binária\n",
+    "### Base binária\n",
     "\n",
     "$$ N_2=\\sum_{i=n}^m a_ i \\times 2^i, \\,\\,\\,\\,\\ a_2 \\in \\{0,1\\}$$\n",
     "\n",
-    "### Exemplos\n",
+    "#### Exemplos\n",
     "\n",
     "a) $(1011)_2 = 1 \\times 2^0 + 1 \\times 2^1 + 0 \\times 2^2 + 1 \\times 2^3$\n",
     "\n",
     "b) $(111.01)_2 = 1 \\times 2^{-2} + 0 \\times 2^{-1} + 1 \\times 2^0 + 1 \\times 2^1 + 1 \\times 2^2 $\n",
     "\n",
-    "## Base decimal\n",
+    "### Base decimal\n",
     "\n",
     " $$ N_{10}=\\sum_{i=n}^m a_ i \\times 10^i, \\,\\,\\,\\,\\ a_{10} \\in \\{0,1,2,3,...,9 \\}$$\n",
     "\n",
-    "### Exemplos\n",
+    "#### Exemplos\n",
     "\n",
     "a) $(231)_{10} = 1 \\times 10^0 + 3 \\times 10^1 + 2 \\times 10^2$\n",
     "\n",
@@ -106,9 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -138,9 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -221,9 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -300,9 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -337,9 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -359,9 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -381,9 +400,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -424,9 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -518,7 +533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
