--- a/3_ZEROS_DE_FUNCOES/3.3_metodo_da_bissecao.ipynb
+++ b/3_ZEROS_DE_FUNCOES/3.3_metodo_da_bissecao.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,13 @@
       "x = 0.6344 | Erro = 0.0443\n",
       "x = 0.6484 | Erro = 0.0217\n",
       "x = 0.6555 | Erro = 0.0107\n",
-      "x = 0.6520 | Erro = 0.0054\n"
+      "x = 0.6520 | Erro = 0.0054\n",
+      "x = 0.6537 | Erro = 0.0027\n",
+      "x = 0.6528 | Erro = 0.0013\n",
+      "x = 0.6533 | Erro = 0.0007\n",
+      "x = 0.6531 | Erro = 0.0003\n",
+      "x = 0.6529 | Erro = 0.0002\n",
+      "x = 0.6529 | Erro = 0.0001\n"
      ]
     }
    ],
@@ -93,7 +99,7 @@
     "\n",
     "f = lambda x: x**2 + math.log(x)\n",
     "\n",
-    "while err > 0.01:\n",
+    "while err > 0.0001:\n",
     "    x = (a+b)/2.0\n",
     "    if f(x)*f(a) < 0:\n",
     "        b = x\n",
